Cards: Make the editing background fixed, to make it visible even with a scrolled viewport.

--- a/VAR.Focus.Web/Styles/05. Cards.css
+++ b/VAR.Focus.Web/Styles/05. Cards.css
@@ -169,7 +169,7 @@
 
 .divEditBackground {
     display: block;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
